[package]
name = "pcap_assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
errors = "0.0.0"
hex = "0.4.3"
colored = "2.0.0"
byteorder = "1.4.3"
derive-into-owned = "0.2.0"

